# tree-sitter-jq

./: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jq.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jq/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJq/: jq.h
bindings/swift/TreeSitterJqTests/: TreeSitterJqTests.swift
queries/: highlights.scm
scripts/: test.sh
src/: grammar.json  node-types.json  parser.c
test/: new1.7.jq  stream.jq  string-interp.jq  sub.jq
test/corpus/: .dir-locals.el  comment.txt  function.txt  import.txt  include.txt  module.txt
test/exprs/: alt-comma.jq  alt-expr.jq  arrays.jq  binary-expr.jq  binary-prec.jq  bindings.jq  break-label.jq  destruct-alt.jq  destructure-alt.jq  destructuring.jq  foreach.jq  func-expr.jq  function-expressions.jq  if-then.jq  literals.jq  objects.jq  optional.jq  reduce.jq  try-catch.jq
test/functions/: inc.jq  range.jq  simple.jq  stream.jq
test/statements/: a.jq  b.jq  c.jq  statements.jq
