[package]
name = "tree-sitter-jq"
description = "jq grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "jq"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-jq"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
