[package]
name = "tree-sitter-jq"
description = "Jq grammar for tree-sitter"
version = "1.0.1"
authors = ["Noah Peart <noah.v.peart@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jq"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nverno/tree-sitter-jq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
