[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jq"
description = "Jq grammar for tree-sitter"
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "jq"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Noah Peart", email = "noah.v.peart@gmail.com" }]
requires-python = ">=3.10"
license.text = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nverno/tree-sitter-jq"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
